2007-08-27  Andreas Røsdal  <andreasr@gnome.org>

	* /src/lib/sudoku-maker.py: Resolve Bug #470523: fix type mismatch.
	Patch from Gediminas Paulauskas.

2007-07-28  Andreas Røsdal  <andreasr@gnome.org>

	* gnome_sudoku.py: Fix the bug 'Ctrl-C in gnome-terminal 
	crashes the game'. Patch from Quentin Neill in bug #401411.
	
2007-07-17  Thomas H.P. Andersen  <phomes@gmail.com>

	* /src/lib/sudoku_maker.py: Set sys.setcheckinterval to 2^31-1 
	instead of sys.maxint (bug #437270)

2007-07-17  Thomas H.P. Andersen  <phomes@gmail.com>

	* /src/lib/printing.py: Remove faulty conversion from html to rgb 
	color when printing puzzles with trackers (bug #429854)

2007-06-22  Thomas H.P. Andersen  <phomes@gmail.com>

	* gnome-sudoku.desktop.in.in: Add GTK to categories and reorder the
	lines to go in the same order as the other games. (bug #449619)

2007-06-20  Thomas H.P. Andersen  <phomes@gmail.com>

	* gnome-sudoku.desktop.in.in: Change comment to:
	"Test your logic skills in this number grid puzzle" (bug #409413)

2007-06-18  Thomas H.P. Andersen  <phomes@gmail.com>

	* src/lib/gsudoku.py: Set number popup transient for the
	main window. (bug #406767)

2007-06-17  Thomas H.P. Andersen  <phomes@gmail.com>

	* src/lib/gnome_sudoku.py: Store highlight setting in gconf (bug #445590)

2007-06-13  Thomas H.P. Andersen  <phomes@gmail.com>

	* src/lib/gsudoku.py: Don't allow grey fields to be changed by mouse
	(bug #422666). 

2007-06-05  Andreas Røsdal  <andreasr@gnome.org>

	* gnome_sudoku.py: Remove the option for selecting black background
	option (bug #395135). 

2007-06-05  Andreas Røsdal  <andreasr@gnome.org>

	* gnome_sudoku.py: Rearrage meny items to be more logically organized. 

2007-06-05  Andreas Røsdal  <andreasr@gnome.org>

	* gnome_sudoku.py: Disable saving and loading, because of all the 
	crashes reported to these features.

2007-06-05  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/gnome_sudoku.py:
	* src/lib/printing.py: Ensure that g_thread_init is called