@@ -1,3 +1,13 @@
+2007-08-28  Andreas Røsdal  <andreasr@gnome.org>
+
+	* /src/lib/dialog_swallower.py: Fix callbacks causing crashes. 
+	Patch from Gediminas Paulauskas in bug #458734.
+
+2007-08-28  Andreas Røsdal  <andreasr@gnome.org>
+
+	* /src/lib/gsudoku.py: Fix callbacks causing crashes. 
+	Patch from Gediminas Paulauskas in bug #458734.
+
 2007-08-27  Andreas Røsdal  <andreasr@gnome.org>
 
 	* /src/lib/sudoku-maker.py: Resolve Bug #470523: fix type mismatch.
